[tool.poetry]
name = "smallchain"
version = "0.1.0"
description = "This is a small implementation of langchain, including a JARVIS-like project"
authors = ["Dogan <dogankeskin33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

# Core dependencies
openai = "*"
torch = "*"
loguru = "*"
rich = "*"
termcolor = "*"
pydantic = "^2.0"
pydantic-settings = "^2.0"
aiohttp = "*"
requests = "*"
geocoder = "*"

# Google API dependencies
google-auth = "*"
google-auth-oauthlib = "*"
google-auth-httplib2 = "*"
google-api-python-client = "*"

# PDF processing
PyPDF2 = "*"
pymupdf = "*"
pdfplumber = "*"

# Audio processing
pyaudio = "*"
pygame = "*"

# UI Framework
PyQt6 = "*"
PyQt6-WebEngine = "*"

# Additional utilities
typing-extensions = "*"
enum34 = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
flake8 = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
